--- a/packages/vant-cli/site/mobile/index.html
+++ b/packages/vant-cli/site/mobile/index.html
@@ -19,8 +19,8 @@
     <meta http-equiv="Cache-Control" content="no-cache" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <% if (headHtml) { %>
-      <%- headHtml %>
+    <% if (htmlWebpackPlugin.options.headHtml) { %>
+      <%- htmlWebpackPlugin.options.headHtml %>
     <% } %>
     <% if (htmlWebpackPlugin.options.baiduAnalytics) { %>
     <script>
