--- a/packages/vant-cli/site/desktop/index.html
+++ b/packages/vant-cli/site/desktop/index.html
@@ -20,7 +20,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <% if (htmlWebpackPlugin.options.headHtml) { %>
-      <%- htmlWebpackPlugin.options.headHtml %>
+      <%= htmlWebpackPlugin.options.headHtml %>
     <% } %>
     <% if (htmlWebpackPlugin.options.usingSearch) { %>
     <link
