--- a/packages/vant-cli/site/index.html
+++ b/packages/vant-cli/site/index.html
@@ -30,7 +30,7 @@
     </script>
     <% } %>
   </head>
-  <body ontouchstart>
+  <body>
     <div id="app"></div>
     <script type="module" src="/desktop/main.js"></script>
   </body>
