--- a/packages/vant-cli/site/mobile.html
+++ b/packages/vant-cli/site/mobile.html
@@ -41,6 +41,10 @@
   </head>
   <body>
     <div id="app"></div>
+    <% if (frameWork === 'react')  {%>
+    <script type="module" src="/mobile-react/main.tsx"></script>
+    <% } else {%>
     <script type="module" src="/mobile/main.js"></script>
+    <% } %>
   </body>
 </html>
