feat(vant-cli): add react libiray

--- a/packages/vant-cli/site/mobile.html
+++ b/packages/vant-cli/site/mobile.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <% if (frameWork === 'react')  {%>
+    <% if (framework === 'react')  {%>
     <script type="module" src="/mobile-react/main.tsx"></script>
     <% } else {%>
     <script type="module" src="/mobile/main.js"></script>
