--- a/packages/vant-cli/site/index.html
+++ b/packages/vant-cli/site/index.html
@@ -32,6 +32,10 @@
   </head>
   <body>
     <div id="app"></div>
+    <% if (isVue2) { %>
+    <script type="module" src="/desktop/vue2/main.js"></script>
+    <% } else { %>
     <script type="module" src="/desktop/main.js"></script>
+    <% } %>
   </body>
 </html>
