新增Verify滑动验证组件

--- a/packages/vant-cli/site/index.html
+++ b/packages/vant-cli/site/index.html
@@ -6,7 +6,9 @@
     <% if (description) { %>
     <meta name="description" content="<%= description %>" />
     <% } %>
-    <link rel="icon" type="image/png" href="<%= logo %>" />
+    <link rel="icon" type="image/png" href="<%= 
+    
+    logo %>" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover"
